# iron-board

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  templates.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: board_repository.rs  connection.rs  lib.rs  post_repository.rs  schema.rs  session_repository.rs  thread_repository.rs  user_repository.rs
docs/: ARCHITECTURE.md  CONTRIBUTE.md  DESIGN_DOCUMENT.md  TECH_SPEC.md
static/css/: style.css
static/js/: main.js
templates/: base.html  board.html  boards.html  catalog.html  index.html  threads.html
templates/components/: post.html  thread_preview.html
