[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "serde"] }

models = { path = "../models" }